# aezora

./: README.md  build.gradle  restore_sonic.sh  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  build.gradle.bak_media3  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_audio.cpp
app/src/main/java/com/aezora/music/: AezoraApplication.kt
app/src/main/java/com/aezora/music/audio/: AudioEngine.kt  NativeAudio.kt  PitchAudioProcessor.kt  RubberBandEngine.kt
app/src/main/java/com/aezora/music/data/local/: Database.kt  Mappers.kt  PreferencesManager.kt
app/src/main/java/com/aezora/music/data/remote/soundcloud/: SoundCloudService.kt  SoundCloudService.kt.bak  (+1 more)
app/src/main/java/com/aezora/music/di/: AppModule.kt  AudioModule.kt
app/src/main/java/com/aezora/music/domain/model/: Models.kt
app/src/main/java/com/aezora/music/domain/repository/: MusicRepository.kt
app/src/main/java/com/aezora/music/service/: DownloadWorker.kt  MusicService.kt  PlayerController.kt
app/src/main/java/com/aezora/music/ui/: MainActivity.kt  MainViewModel.kt  SharedComponents.kt
app/src/main/java/com/aezora/music/ui/home/: HomeScreen.kt  SearchScreen.kt
app/src/main/java/com/aezora/music/ui/player/: PlayerScreen.kt
app/src/main/java/com/aezora/music/ui/settings/: SettingsScreen.kt
app/src/main/java/com/aezora/music/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
(+1 files in other folders)
